src/tests/zustand-pick/syntax-errors/pick-nested-properties.js
const {
  order: { user },
} = useGlobalStore.pick();
